# example-fastapi

./: .dockerignore  .gitignore  LEARNINGS.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: fc32c563a1c3_initial_migration.py
app/: config.py  db.py  models.py  utils.py
app/routers/: login.py  posts.py  users.py  vote.py
app/schemas/: post.py  user.py
app/services/: auth_service.py  post_service.py  user_service.py
terraform/: main.tf
tests/: conftest.py  test_flow.py
